src/main/antlr4/ref/schemaParser.py
# Generated from schema.g4 by ANTLR 4.7.1
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys



class schemaParser ( Parser ):

    grammarFileName = "schema.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"';'", u"'.'", u"'in time'", u"'and space'", 
                     u"'\\forall'", u"'\\exists'", u"'notnull'", u"'transfer'", 
                     u"'try-expand'", u"'relation'", u"'future-check'", 
                     u"'event'", u"'unique'", u"'entity'", u"'MVD'", u"'rule'", 
                     u"'for'", u"'as'", u"'set'", u"'with'", u"'begin'", 
                     u"'end'", u"'exist'", u"'except'", u"'macro'", u"'->>'", 
                     u"'=>'", u"'('", u"')'", u"'<'", u"'>'", u"'<='", u"'>='", 
                     u"','", u"':'", u"'~'", u"'False'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"TRANSFER", u"TRYEXPAND", u"RELATION", u"FUTURECHECK", 
                      u"EVENT", u"UNIQUE", u"ENTITY", u"FD", u"RULE", u"FOR", 
                      u"DECLARE", u"SET", u"WITH", u"BEGIN", u"END", u"EXIST", 
                      u"EXCEPT", u"MACRO", u"MARROW", u"IMPLIES", u"LPAR", 
                      u"RPAR", u"LT", u"GT", u"LEQ", u"GEQ", u"COMMA", u"TYPE", 
                      u"NEG", u"BOT", u"VALUE", u"STRING", u"WS", u"COMMENT", 
                      u"LINE_COMMENT" ]

    RULE_program = 0
    RULE_commands = 1
    RULE_except = 2
    RULE_intime = 3
    RULE_inspace = 4
    RULE_setOptions = 5
    RULE_paramDeclared = 6
    RULE_stringlist = 7
    RULE_moreClauses = 8
    RULE_clause = 9
    RULE_forall = 10
    RULE_exists = 11
    RULE_predicates = 12
    RULE_angestrengend = 13
    RULE_lbound = 14
    RULE_ubound = 15

    ruleNames =  [ u"program", u"commands", u"except", u"intime", u"inspace", 
                   u"setOptions", u"paramDeclared", u"stringlist", u"moreClauses", 
                   u"clause", u"forall", u"exists", u"predicates", u"angestrengend", 
                   u"lbound", u"ubound" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    TRANSFER=8
    TRYEXPAND=9
    RELATION=10
    FUTURECHECK=11
    EVENT=12
    UNIQUE=13
    ENTITY=14
    FD=15
    RULE=16
    FOR=17
    DECLARE=18
    SET=19
    WITH=20
    BEGIN=21
    END=22
    EXIST=23
    EXCEPT=24
    MACRO=25
    MARROW=26
    IMPLIES=27
    LPAR=28
    RPAR=29
    LT=30
    GT=31
    LEQ=32
    GEQ=33
    COMMA=34
    TYPE=35
    NEG=36
    BOT=37
    VALUE=38
    STRING=39
    WS=40
    COMMENT=41
    LINE_COMMENT=42

    def __init__(self, input, output=sys.stdout):
        super(schemaParser, self).__init__(input, output=output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(schemaParser.ProgramContext, self).__init__(parent, invokingState)
            self.parser = parser

        def commands(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(schemaParser.CommandsContext)
            else:
                return self.getTypedRuleContext(schemaParser.CommandsContext,i)


        def getRuleIndex(self):
            return schemaParser.RULE_program

        def enterRule(self, listener):
            if hasattr(listener, "enterProgram"):
                listener.enterProgram(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitProgram"):
                listener.exitProgram(self)




    def program(self):

        localctx = schemaParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 32
                    self.commands()
                    self.state = 33
                    self.match(schemaParser.T__0) 
                self.state = 39
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 40
            self.commands()
            self.state = 41
            self.match(schemaParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CommandsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(schemaParser.CommandsContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return schemaParser.RULE_commands

     
        def copyFrom(self, ctx):
            super(schemaParser.CommandsContext, self).copyFrom(ctx)



    class Fdep_declareContext(CommandsContext):

        def __init__(self, parser, ctx): # actually a schemaParser.CommandsContext)
            super(schemaParser.Fdep_declareContext, self).__init__(parser)
            self.copyFrom(ctx)

        def FD(self):
            return self.getToken(schemaParser.FD, 0)
        def FOR(self):
            return self.getToken(schemaParser.FOR, 0)
        def STRING(self):
            return self.getToken(schemaParser.STRING, 0)
        def DECLARE(self):
            return self.getToken(schemaParser.DECLARE, 0)
        def stringlist(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(schemaParser.StringlistContext)
            else:
                return self.getTypedRuleContext(schemaParser.StringlistContext,i)

        def MARROW(self):
            return self.getToken(schemaParser.MARROW, 0)

        def enterRule(self, listener):
            if hasattr(listener, "enterFdep_declare"):
                listener.enterFdep_declare(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitFdep_declare"):
                listener.exitFdep_declare(self)


    class Beginend_declareContext(CommandsContext):

        def __init__(self, parser, ctx): # actually a schemaParser.CommandsContext)
            super(schemaParser.Beginend_declareContext, self).__init__(parser)
            self.orig = None # StringlistContext
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(schemaParser.STRING, 0)
        def LPAR(self):
            return self.getToken(schemaParser.LPAR, 0)
        def RPAR(self):
            return self.getToken(schemaParser.RPAR, 0)
        def intime(self):
            return self.getTypedRuleContext(schemaParser.IntimeContext,0)

        def BEGIN(self):
            return self.getToken(schemaParser.BEGIN, 0)
        def END(self):
            return self.getToken(schemaParser.END, 0)
        def stringlist(self):
            return self.getTypedRuleContext(schemaParser.StringlistContext,0)

        def UNIQUE(self):
            return self.getToken(schemaParser.UNIQUE, 0)

        def enterRule(self, listener):
            if hasattr(listener, "enterBeginend_declare"):
                listener.enterBeginend_declare(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitBeginend_declare"):
                listener.exitBeginend_declare(self)


    class RuleContext(CommandsContext):

        def __init__(self, parser, ctx): # actually a schemaParser.CommandsContext)
            super(schemaParser.RuleContext, self).__init__(parser)
            self.copyFrom(ctx)

        def RULE(self):
            return self.getToken(schemaParser.RULE, 0)
        def moreClauses(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(schemaParser.MoreClausesContext)
            else:
                return self.getTypedRuleContext(schemaParser.MoreClausesContext,i)

        def IMPLIES(self):
            return self.getToken(schemaParser.IMPLIES, 0)
        def BOT(self):
            return self.getToken(schemaParser.BOT, 0)
        def WITH(self):
            return self.getToken(schemaParser.WITH, 0)
        def predicates(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(schemaParser.PredicatesContext)
            else:
                return self.getTypedRuleContext(schemaParser.PredicatesContext,i)


        def enterRule(self, listener):
            if hasattr(listener, "enterRule"):
                listener.enterRule(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitRule"):
                listener.exitRule(self)


    class Macro_expandContext(CommandsContext):

        def __init__(self, parser, ctx): # actually a schemaParser.CommandsContext)
            super(schemaParser.Macro_expandContext, self).__init__(parser)
            self.copyFrom(ctx)

        def TRYEXPAND(self):
            return self.getToken(schemaParser.TRYEXPAND, 0)
        def stringlist(self):
            return self.getTypedRuleContext(schemaParser.StringlistContext,0)

        def FOR(self):
            return self.getToken(schemaParser.FOR, 0)
        def RELATION(self):
            return self.getToken(schemaParser.RELATION, 0)
        def EVENT(self):
            return self.getToken(schemaParser.EVENT, 0)

        def enterRule(self, listener):
            if hasattr(listener, "enterMacro_expand"):
                listener.enterMacro_expand(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitMacro_expand"):
                listener.exitMacro_expand(self)


    class Macro_definitionContext(CommandsContext):

        def __init__(self, parser, ctx): # actually a schemaParser.CommandsContext)
            super(schemaParser.Macro_definitionContext, self).__init__(parser)
            self.copyFrom(ctx)

        def MACRO(self):
            return self.getToken(schemaParser.MACRO, 0)
        def STRING(self, i=None):
            if i is None:
                return self.getTokens(schemaParser.STRING)
            else:
                return self.getToken(schemaParser.STRING, i)
        def LPAR(self):
            return self.getToken(schemaParser.LPAR, 0)
        def stringlist(self):
            return self.getTypedRuleContext(schemaParser.StringlistContext,0)

        def RPAR(self):
            return self.getToken(schemaParser.RPAR, 0)
        def DECLARE(self):
            return self.getToken(schemaParser.DECLARE, 0)
        def COMMA(self):
            return self.getToken(schemaParser.COMMA, 0)
        def RULE(self):
            return self.getToken(schemaParser.RULE, 0)
        def moreClauses(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(schemaParser.MoreClausesContext)
            else:
                return self.getTypedRuleContext(schemaParser.MoreClausesContext,i)

        def IMPLIES(self):
            return self.getToken(schemaParser.IMPLIES, 0)
        def BOT(self):
            return self.getToken(schemaParser.BOT, 0)
        def WITH(self):
            return self.getToken(schemaParser.WITH, 0)
        def predicates(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(schemaParser.PredicatesContext)
            else:
                return self.getTypedRuleContext(schemaParser.PredicatesContext,i)


        def enterRule(self, listener):
            if hasattr(listener, "enterMacro_definition"):
                listener.enterMacro_definition(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitMacro_definition"):
                listener.exitMacro_definition(self)


    class Transfer_macroContext(CommandsContext):

        def __init__(self, parser, ctx): # actually a schemaParser.CommandsContext)
            super(schemaParser.Transfer_macroContext, self).__init__(parser)
            self.orig = None # StringlistContext
            self.dest = None # StringlistContext
            self.copyFrom(ctx)

        def TRANSFER(self):
            return self.getToken(schemaParser.TRANSFER, 0)
        def STRING(self):
            return self.getToken(schemaParser.STRING, 0)
        def LPAR(self):
            return self.getToken(schemaParser.LPAR, 0)
        def RPAR(self):
            return self.getToken(schemaParser.RPAR, 0)
        def intime(self):
            return self.getTypedRuleContext(schemaParser.IntimeContext,0)

        def DECLARE(self):
            return self.getToken(schemaParser.DECLARE, 0)
        def stringlist(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(schemaParser.StringlistContext)
            else:
                return self.getTypedRuleContext(schemaParser.StringlistContext,i)


        def enterRule(self, listener):
            if hasattr(listener, "enterTransfer_macro"):
                listener.enterTransfer_macro(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitTransfer_macro"):
                listener.exitTransfer_macro(self)


    class Rel_delcareContext(CommandsContext):

        def __init__(self, parser, ctx): # actually a schemaParser.CommandsContext)
            super(schemaParser.Rel_delcareContext, self).__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(schemaParser.STRING, 0)
        def LPAR(self):
            return self.getToken(schemaParser.LPAR, 0)
        def stringlist(self):
            return self.getTypedRuleContext(schemaParser.StringlistContext,0)

        def RPAR(self):
            return self.getToken(schemaParser.RPAR, 0)
        def RELATION(self):
            return self.getToken(schemaParser.RELATION, 0)
        def EVENT(self):
            return self.getToken(schemaParser.EVENT, 0)

        def enterRule(self, listener):
            if hasattr(listener, "enterRel_delcare"):
                listener.enterRel_delcare(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitRel_delcare"):
                listener.exitRel_delcare(self)


    class EnexistsContext(CommandsContext):

        def __init__(self, parser, ctx): # actually a schemaParser.CommandsContext)
            super(schemaParser.EnexistsContext, self).__init__(parser)
            self.copyFrom(ctx)

        def ENTITY(self):
            return self.getToken(schemaParser.ENTITY, 0)
        def EXIST(self):
            return self.getToken(schemaParser.EXIST, 0)
        def intime(self):
            return self.getTypedRuleContext(schemaParser.IntimeContext,0)

        def stringlist(self):
            return self.getTypedRuleContext(schemaParser.StringlistContext,0)

        def except(self):
            return self.getTypedRuleContext(schemaParser.ExceptContext,0)

        def inspace(self):
            return self.getTypedRuleContext(schemaParser.InspaceContext,0)


        def enterRule(self, listener):
            if hasattr(listener, "enterEnexists"):
                listener.enterEnexists(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitEnexists"):
                listener.exitEnexists(self)



    def commands(self):

        localctx = schemaParser.CommandsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_commands)
        self._la = 0 # Token type
        try:
            self.state = 132
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [schemaParser.RELATION, schemaParser.EVENT]:
                localctx = schemaParser.Rel_delcareContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 43
                _la = self._input.LA(1)
                if not(_la==schemaParser.RELATION or _la==schemaParser.EVENT):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 44
                self.match(schemaParser.STRING)
                self.state = 45
                self.match(schemaParser.LPAR)
                self.state = 46
                self.stringlist()
                self.state = 47
                self.match(schemaParser.RPAR)
                pass
            elif token in [schemaParser.FD]:
                localctx = schemaParser.Fdep_declareContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 49
                self.match(schemaParser.FD)
                self.state = 50
                self.match(schemaParser.FOR)
                self.state = 51
                self.match(schemaParser.STRING)
                self.state = 52
                self.match(schemaParser.DECLARE)
                self.state = 53
                self.stringlist()
                self.state = 54
                self.match(schemaParser.MARROW)
                self.state = 55
                self.stringlist()
                pass
            elif token in [schemaParser.RULE]:
                localctx = schemaParser.RuleContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 57
                self.match(schemaParser.RULE)
                self.state = 58
                self.moreClauses()
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==schemaParser.WITH:
                    self.state = 59
                    self.match(schemaParser.WITH)
                    self.state = 61 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 60
                        self.predicates()
                        self.state = 63 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==schemaParser.STRING):
                            break



                self.state = 67
                self.match(schemaParser.IMPLIES)
                self.state = 70
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [schemaParser.T__4, schemaParser.T__5, schemaParser.NEG, schemaParser.STRING]:
                    self.state = 68
                    self.moreClauses()
                    pass
                elif token in [schemaParser.BOT]:
                    self.state = 69
                    self.match(schemaParser.BOT)
                    pass
                else:
                    raise NoViableAltException(self)

                pass
            elif token in [schemaParser.ENTITY]:
                localctx = schemaParser.EnexistsContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 72
                self.match(schemaParser.ENTITY)
                self.state = 73
                self.match(schemaParser.EXIST)
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==schemaParser.VALUE or _la==schemaParser.STRING:
                    self.state = 74
                    self.stringlist()


                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==schemaParser.EXCEPT:
                    self.state = 77
                    self.except()


                self.state = 80
                self.intime()
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==schemaParser.T__3:
                    self.state = 81
                    self.inspace()


                pass
            elif token in [schemaParser.MACRO]:
                localctx = schemaParser.Macro_definitionContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 84
                self.match(schemaParser.MACRO)
                self.state = 85
                self.match(schemaParser.STRING)
                self.state = 86
                self.match(schemaParser.LPAR)
                self.state = 87
                self.stringlist()
                self.state = 88
                self.match(schemaParser.RPAR)
                self.state = 89
                self.match(schemaParser.DECLARE)
                self.state = 90
                self.match(schemaParser.STRING)
                self.state = 91
                self.match(schemaParser.COMMA)
                self.state = 92
                self.match(schemaParser.RULE)
                self.state = 93
                self.moreClauses()
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==schemaParser.WITH:
                    self.state = 94
                    self.match(schemaParser.WITH)
                    self.state = 96 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 95
                        self.predicates()
                        self.state = 98 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==schemaParser.STRING):
                            break



                self.state = 102
                self.match(schemaParser.IMPLIES)
                self.state = 105
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [schemaParser.T__4, schemaParser.T__5, schemaParser.NEG, schemaParser.STRING]:
                    self.state = 103
                    self.moreClauses()
                    pass
                elif token in [schemaParser.BOT]:
                    self.state = 104
                    self.match(schemaParser.BOT)
                    pass
                else:
                    raise NoViableAltException(self)

                pass
            elif token in [schemaParser.TRYEXPAND]:
                localctx = schemaParser.Macro_expandContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 107
                self.match(schemaParser.TRYEXPAND)
                self.state = 108
                self.stringlist()
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==schemaParser.FOR:
                    self.state = 109
                    self.match(schemaParser.FOR)
                    self.state = 110
                    _la = self._input.LA(1)
                    if not(_la==schemaParser.RELATION or _la==schemaParser.EVENT):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                pass
            elif token in [schemaParser.UNIQUE, schemaParser.BEGIN, schemaParser.END]:
                localctx = schemaParser.Beginend_declareContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==schemaParser.UNIQUE:
                    self.state = 113
                    self.match(schemaParser.UNIQUE)


                self.state = 116
                _la = self._input.LA(1)
                if not(_la==schemaParser.BEGIN or _la==schemaParser.END):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 117
                self.match(schemaParser.STRING)
                self.state = 118
                self.match(schemaParser.LPAR)
                self.state = 119
                localctx.orig = self.stringlist()
                self.state = 120
                self.match(schemaParser.RPAR)
                self.state = 121
                self.intime()
                pass
            elif token in [schemaParser.TRANSFER]:
                localctx = schemaParser.Transfer_macroContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 123
                self.match(schemaParser.TRANSFER)
                self.state = 124
                self.match(schemaParser.STRING)
                self.state = 125
                self.match(schemaParser.LPAR)
                self.state = 126
                localctx.orig = self.stringlist()
                self.state = 127
                self.match(schemaParser.RPAR)
                self.state = 128
                self.intime()
                self.state = 129
                self.match(schemaParser.DECLARE)
                self.state = 130
                localctx.dest = self.stringlist()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExceptContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(schemaParser.ExceptContext, self).__init__(parent, invokingState)
            self.parser = parser

        def EXCEPT(self):
            return self.getToken(schemaParser.EXCEPT, 0)

        def stringlist(self):
            return self.getTypedRuleContext(schemaParser.StringlistContext,0)


        def getRuleIndex(self):
            return schemaParser.RULE_except

        def enterRule(self, listener):
            if hasattr(listener, "enterExcept"):
                listener.enterExcept(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitExcept"):
                listener.exitExcept(self)




    def except(self):

        localctx = schemaParser.ExceptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_except)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(schemaParser.EXCEPT)
            self.state = 135
            self.stringlist()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IntimeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(schemaParser.IntimeContext, self).__init__(parent, invokingState)
            self.parser = parser

        def stringlist(self):
            return self.getTypedRuleContext(schemaParser.StringlistContext,0)


        def getRuleIndex(self):
            return schemaParser.RULE_intime

        def enterRule(self, listener):
            if hasattr(listener, "enterIntime"):
                listener.enterIntime(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitIntime"):
                listener.exitIntime(self)




    def intime(self):

        localctx = schemaParser.IntimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_intime)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(schemaParser.T__2)
            self.state = 138
            self.stringlist()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InspaceContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(schemaParser.InspaceContext, self).__init__(parent, invokingState)
            self.parser = parser

        def stringlist(self):
            return self.getTypedRuleContext(schemaParser.StringlistContext,0)


        def getRuleIndex(self):
            return schemaParser.RULE_inspace

        def enterRule(self, listener):
            if hasattr(listener, "enterInspace"):
                listener.enterInspace(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitInspace"):
                listener.exitInspace(self)




    def inspace(self):

        localctx = schemaParser.InspaceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_inspace)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(schemaParser.T__3)
            self.state = 141
            self.stringlist()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SetOptionsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(schemaParser.SetOptionsContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return schemaParser.RULE_setOptions

     
        def copyFrom(self, ctx):
            super(schemaParser.SetOptionsContext, self).copyFrom(ctx)



    class Set_relationContext(SetOptionsContext):

        def __init__(self, parser, ctx): # actually a schemaParser.SetOptionsContext)
            super(schemaParser.Set_relationContext, self).__init__(parser)
            self.copyFrom(ctx)

        def RELATION(self):
            return self.getToken(schemaParser.RELATION, 0)
        def STRING(self, i=None):
            if i is None:
                return self.getTokens(schemaParser.STRING)
            else:
                return self.getToken(schemaParser.STRING, i)
        def LPAR(self):
            return self.getToken(schemaParser.LPAR, 0)
        def COMMA(self):
            return self.getToken(schemaParser.COMMA, 0)
        def RPAR(self):
            return self.getToken(schemaParser.RPAR, 0)

        def enterRule(self, listener):
            if hasattr(listener, "enterSet_relation"):
                listener.enterSet_relation(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitSet_relation"):
                listener.exitSet_relation(self)


    class Set_entityContext(SetOptionsContext):

        def __init__(self, parser, ctx): # actually a schemaParser.SetOptionsContext)
            super(schemaParser.Set_entityContext, self).__init__(parser)
            self.copyFrom(ctx)

        def ENTITY(self):
            return self.getToken(schemaParser.ENTITY, 0)
        def STRING(self):
            return self.getToken(schemaParser.STRING, 0)

        def enterRule(self, listener):
            if hasattr(listener, "enterSet_entity"):
                listener.enterSet_entity(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitSet_entity"):
                listener.exitSet_entity(self)


    class Set_eventContext(SetOptionsContext):

        def __init__(self, parser, ctx): # actually a schemaParser.SetOptionsContext)
            super(schemaParser.Set_eventContext, self).__init__(parser)
            self.copyFrom(ctx)

        def EVENT(self):
            return self.getToken(schemaParser.EVENT, 0)
        def STRING(self):
            return self.getToken(schemaParser.STRING, 0)
        def LPAR(self):
            return self.getToken(schemaParser.LPAR, 0)
        def stringlist(self):
            return self.getTypedRuleContext(schemaParser.StringlistContext,0)

        def RPAR(self):
            return self.getToken(schemaParser.RPAR, 0)

        def enterRule(self, listener):
            if hasattr(listener, "enterSet_event"):
                listener.enterSet_event(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitSet_event"):
                listener.exitSet_event(self)



    def setOptions(self):

        localctx = schemaParser.SetOptionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_setOptions)
        self._la = 0 # Token type
        try:
            self.state = 162
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [schemaParser.RELATION]:
                localctx = schemaParser.Set_relationContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 143
                self.match(schemaParser.RELATION)
                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==schemaParser.STRING:
                    self.state = 144
                    self.match(schemaParser.STRING)
                    self.state = 145
                    self.match(schemaParser.LPAR)
                    self.state = 146
                    self.match(schemaParser.STRING)
                    self.state = 147
                    self.match(schemaParser.COMMA)
                    self.state = 148
                    self.match(schemaParser.STRING)
                    self.state = 149
                    self.match(schemaParser.RPAR)


                pass
            elif token in [schemaParser.EVENT]:
                localctx = schemaParser.Set_eventContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 152
                self.match(schemaParser.EVENT)
                self.state = 158
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==schemaParser.STRING:
                    self.state = 153
                    self.match(schemaParser.STRING)
                    self.state = 154
                    self.match(schemaParser.LPAR)
                    self.state = 155
                    self.stringlist()
                    self.state = 156
                    self.match(schemaParser.RPAR)


                pass
            elif token in [schemaParser.ENTITY]:
                localctx = schemaParser.Set_entityContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 160
                self.match(schemaParser.ENTITY)
                self.state = 161
                self.match(schemaParser.STRING)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamDeclaredContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(schemaParser.ParamDeclaredContext, self).__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(schemaParser.FOR, 0)

        def STRING(self):
            return self.getToken(schemaParser.STRING, 0)

        def getRuleIndex(self):
            return schemaParser.RULE_paramDeclared

        def enterRule(self, listener):
            if hasattr(listener, "enterParamDeclared"):
                listener.enterParamDeclared(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitParamDeclared"):
                listener.exitParamDeclared(self)




    def paramDeclared(self):
